--- a/src/app/user/main/main.component.html
+++ b/src/app/user/main/main.component.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+<html>
 <head>
+		<meta charset="UTF-8">
   <title>Home</title>
 </head>
 <body class="mdb-skin">
@@ -14,7 +17,7 @@
 				<a href="#">로그인</a> <span>|</span> <a href="#">회원가입</a>
 			</div>
 			<div id="search">
-				<form method="get" action="http://www.tourtips.com/ap/search/search/">
+				<form method="get" action="#">
 					<fieldset>
 						<legend>검색</legend>
 						<span class="round"> <input type="text" name="cseq"	title="검색어 입력" tabindex="1" style="ime-mode: active;">
@@ -28,33 +31,28 @@
 		</div>
 		<div class="menubar">
 			<ul>
-				<li><a href="#">Home</a>
+				<li><a href="#">여행정보</a>
 					<ul>
-						<li><a href="#">Sliders</a></li>
-						<li><a href="#">Galleries</a></li>
-						<li><a href="#">Apps</a></li>
-						<li><a href="#">Extensions</a></li>
+						<li><a href="#">Youtube검색</a></li>
+						<li><a href="#">Blog검색</a></li>
+						<li><a href="#">Check List</a></li>
 					</ul></li>
-				<li><a href="#" id="current">Products</a>
+				<li><a href="#" id="current">커뮤니티</a>
 					<ul>
-						<li><a href="#">Sliders</a></li>
-						<li><a href="#">Galleries</a></li>
-						<li><a href="#">Apps</a></li>
-						<li><a href="#">Extensions</a></li>
+						<li><a href="/sliders">여행 후기</a></li>
+						<li><a href="#">여행 계획</a></li>
+						<li><a href="#">동행인 구하기</a></li>
+						<li><a href="#">여행 Tip</a></li>
 					</ul></li>
-				<li><a href="#">Company</a>
+				<li><a href="#">호텔</a>
 					<ul>
-						<li><a href="#">Sliders</a></li>
-						<li><a href="#">Galleries</a></li>
-						<li><a href="#">Apps</a></li>
-						<li><a href="#">Extensions</a></li>
+						<li><a href="#">추천 숙박</a></li>
 					</ul></li>
-				<li><a href="#">Address</a>
+					<li><a href="#">공지사항</a></li>
+				<li><a href="#">마이페이지</a>
 					<ul>
-						<li><a href="#">Sliders</a></li>
-						<li><a href="#">Galleries</a></li>
-						<li><a href="#">Apps</a></li>
-						<li><a href="#">Extensions</a></li>
+						<li><a href="#">내 작성글 보기</a></li>
+						<li><a href="#">회원 정보 수정</a></li>
 					</ul></li>
 			</ul>
 		</div>
@@ -62,3 +60,4 @@
 
 
 </body>
+</html>
