--- a/src/app/user/sliders/sliders.component.html
+++ b/src/app/user/sliders/sliders.component.html
@@ -66,18 +66,13 @@
   
       <div class="lnb" >
         <h1 class="bigTitle">
-          <a href="#">Home</a>
+          <a href="#">커뮤니티</a>
         </h1>
         <ul>
-          <li  class="allNotice on"><a href="sliders">Sliders</a></li>
-          <li><a href="galleries">Galleries</a></li>
-          <li class=""><a href="#">Q&A</a></li>
-          <li class=""><a href="#">아무거나 토크</a></li>
-  
-          <li class="myNotice "><a href="/ap/tboard/community/?my=a">
-          내 글 모아보기 (0)<span></span>
-          </a>
-          </li>
+          <li  class="allNotice on"><a href="sliders">여행 후기</a></li>
+          <li><a href="galleries">여행 계획</a></li>
+          <li class=""><a href="#">동행인 구하기</a></li>
+          <li class=""><a href="#">여행 Tip</a></li>
         </ul>
   
   
@@ -95,7 +90,7 @@
       <!-- contents -->
       <div class="contents">
   
-        <h2 class="titleSt02">전체 글 보기</h2>
+        <h2 class="titleSt02">여행 후기</h2>
   
         <!-- searchNotice -->
         <script type="text/javascript"
