--- a/src/app/user/main/main.component.html
+++ b/src/app/user/main/main.component.html
@@ -29,13 +29,13 @@
 			<!-- //search -->
 
 		</div>
-		<div class="menubar">
+		<div class="menubar" >
 			<ul>
 				<li><a href="#">여행정보</a>
 					<ul>
-						<li><a href="#">Youtube검색</a></li>
+						<li><a href="/test">Youtube검색</a></li>
 						<li><a href="#">Blog검색</a></li>
-						<li><a href="#">Check List</a></li>
+						<li><a href="/checkList">Check List</a></li>
 					</ul></li>
 				<li><a href="#" id="current">커뮤니티</a>
 					<ul>
@@ -57,7 +57,5 @@
 			</ul>
 		</div>
 	</div>
-
-
 </body>
 </html>
