--- a/src/app/user/test/test.component.html
+++ b/src/app/user/test/test.component.html
@@ -37,13 +37,13 @@
       </div>
       <div class="menubar">
           <ul>
-            <li><a href="#">여행정보</a>
+            <li><a href="#" id="current">여행정보</a>
               <ul>
-                <li><a href="#">Youtube검색</a></li>
+                <li><a href="/test">Youtube검색</a></li>
                 <li><a href="#">Blog검색</a></li>
                 <li><a href="#">Check List</a></li>
               </ul></li>
-            <li><a href="#" id="current">커뮤니티</a>
+            <li><a href="#">커뮤니티</a>
               <ul>
                 <li><a href="/sliders">여행 후기</a></li>
                 <li><a href="#">여행 계획</a></li>
@@ -66,25 +66,18 @@
   
       <div class="lnb" >
         <h1 class="bigTitle">
-          <a href="#">커뮤니티</a>
+          <a href="/test">여행정보</a>
         </h1>
         <ul>
-          <li  class="allNotice on"><a href="sliders">여행 후기</a></li>
-          <li><a href="galleries">여행 계획</a></li>
-          <li class=""><a href="#">동행인 구하기</a></li>
-          <li class=""><a href="#">여행 Tip</a></li>
+          <li  class="allNotice on"><a href="/test">Youtube검색</a></li>
+          <li><a href="#">Blog검색</a></li>
+          <li class=""><a href="#">Check List</a></li>
         </ul>
 
   
       </div>
       <!-- //lnb -->
   
-      <!-- contents -->
-      <div class="contents">
-  
-        <h2 class="titleSt02">여행 후기</h2>
-  
-       </div>
             </div>
             </div>
   </body>
