--- a/src/app/user/test/test.component.html
+++ b/src/app/user/test/test.component.html
@@ -41,7 +41,7 @@
               <ul>
                 <li><a href="/test">Youtube검색</a></li>
                 <li><a href="#">Blog검색</a></li>
-                <li><a href="#">Check List</a></li>
+                <li><a href="/checkList">Check List</a></li>
               </ul></li>
             <li><a href="#">커뮤니티</a>
               <ul>
@@ -63,7 +63,7 @@
           </ul>
         </div>
     </div>
-  
+  <!--lnb-->
       <div class="lnb" >
         <h1 class="bigTitle">
           <a href="/test">여행정보</a>
@@ -71,7 +71,7 @@
         <ul>
           <li  class="allNotice on"><a href="/test">Youtube검색</a></li>
           <li><a href="#">Blog검색</a></li>
-          <li class=""><a href="#">Check List</a></li>
+          <li class=""><a href="/checkList">Check List</a></li>
         </ul>
 
   
