--- a/src/app/user/check-list/check-list.component.html
+++ b/src/app/user/check-list/check-list.component.html
@@ -1,158 +1,170 @@
-<body class="mdb-skin">
-  <div id="header">
-    <!-- headTop -->
-    <div class="headTop">
-      <span class="logo"> <a href="#">
-          <img src="//img.tourtips.com/images/pc/logo/origin.gif" alt="투어팁스">
-        </a>
-      </span>
-      <!-- loginArea : 로그인 전 -->
-      <div class="loginArea" style="width: 125px;">
-        <a href="#">로그인</a> <span>|</span> <a href="#">회원가입</a>
-      </div>
-      <div id="search">
-        <form method="get" action="#">
-          <fieldset>
-            <legend>검색</legend>
-            <span class="round"> <input type="text" name="cseq" title="검색어 입력" tabindex="1" style="ime-mode: active;">
-              <button type="submit" name="search" id="search_btn" title="검색" tabindex="2">검색</button>
-            </span>
-          </fieldset>
-        </form>
-      </div>
-      <!-- //search -->
+<!DOCTYPE html>
+<html>
+    <meta charset="UTF-8">
+<body>
+  <div id="wrap">
+  <style>
+  .up_close {background:url(//img.tourtips.com/images/common/close_btn_b.png) no-repeat right center; position:absolute; width:38px; height:37px; 
+  top:15px; right:30px; cursor:pointer}
+  </style>
 
-    </div>
-    <div class="menubar">
-      <ul>
-        <li><a href="#">여행정보</a>
-          <ul>
-            <li><a href="/test">Youtube검색</a></li>
-            <li><a href="#">Blog검색</a></li>
-            <li><a href="/checkList">Check List</a></li>
-          </ul>
-        </li>
-        <li><a href="#" id="current">커뮤니티</a>
-          <ul>
-            <li><a href="/sliders">여행 후기</a></li>
-            <li><a href="#">여행 계획</a></li>
-            <li><a href="#">동행인 구하기</a></li>
-            <li><a href="#">여행 Tip</a></li>
-          </ul>
-        </li>
-        <li><a href="#">호텔</a>
-          <ul>
-            <li><a href="#">추천 숙박</a></li>
-          </ul>
-        </li>
-        <li><a href="#">공지사항</a></li>
-        <li><a href="#">마이페이지</a>
-          <ul>
-            <li><a href="#">내 작성글 보기</a></li>
-            <li><a href="#">회원 정보 수정</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-    <!-- preparation_main -->
-    <div id="preparation_main">
-      <div class="title_visual">
-        <p class="hide">CHECK LIST! 여행가기 전에 꼭! 봐야 할 체크사항을 확인하세요! ※D-DAY는 여행자들의 평균 일정을 표시한 것이니 참고하세요.</p>
+  <div id="subWrap">
+    <div id="header">
+      <!-- headTop -->
+      <div class="headTop">
+        <span class="logo"> <a href="#"> <img
+            src="//img.tourtips.com/images/pc/logo/origin.gif" alt="투어팁스">
+        </a>
+        </span>
+        <!-- loginArea : 로그인 전 -->
+        <div class="loginArea" style="width: 125px;">
+          <a href="#">로그인</a> <span>|</span> <a href="#">회원가입</a>
+        </div>
+        <div id="search">
+          <form method="get"
+            action="http://www.tourtips.com/ap/search/search/">
+            <fieldset>
+              <legend>검색</legend>
+              <span class="round"> <input type="text" name="cseq"
+                title="검색어 입력" tabindex="1" style="ime-mode: active;">
+                <button type="submit" name="search" id="search_btn" title="검색"
+                  tabindex="2">검색</button>
+              </span>
+            </fieldset>
+          </form>
+        </div>
+        <!-- //search -->
+  
       </div>
-      <!-- cList_wrap -->
-      <div class="cList_wrap">
-        <!-- preparation_cList -->
-        <div class="preparation_cList">
-          <div class="pre_in">
-            <span class="shadow"></span>
-            <!-- cList_in -->
-            <div class="cList_in">
-              <!-- pre_table -->
-              <table class="pre_table">
-                <colgroup>
-                  <col style="width:282px;">
-                  <col style="">
-                </colgroup>
-                <thead>
-                  <tr>
-                    <th>DATE.</th>
-                    <th>CHECK.</th>
-                  </tr>
+      <div class="menubar">
+          <ul>
+            <li><a href="#">여행정보</a>
+              <ul>
+                <li><a href="/test">Youtube검색</a></li>
+                <li><a href="#">Blog검색</a></li>
+                <li><a href="/checkList">Check List</a></li>
+              </ul></li>
+            <li><a href="#" id="current">커뮤니티</a>
+              <ul>
+                <li><a href="/sliders">여행 후기</a></li>
+                <li><a href="#">여행 계획</a></li>
+                <li><a href="#">동행인 구하기</a></li>
+                <li><a href="#">여행 Tip</a></li>
+              </ul></li>
+            <li><a href="#">호텔</a>
+              <ul>
+                <li><a href="#">추천 숙박</a></li>
+              </ul></li>
+              <li><a href="#">공지사항</a></li>
+            <li><a href="#">마이페이지</a>
+              <ul>
+                <li><a href="#">내 작성글 보기</a></li>
+                <li><a href="#">회원 정보 수정</a></li>
+              </ul></li>
+          </ul>
+        </div>
+        <script src="//code.jquery.com/jquery-1.12.4.min.js"></script>
+        <script>
+              $( document ).ready( function() {
+                var menu = $('#menubar');
+                var menuLocation = menu.offset();
+
+                $( window ).scroll( function() {
+                  if ( $( document ).scrollTop() >= menuLocation.top ) 
+                  {
+                    menu.css({
+                      position:'fixed',
+                      top:'0',
+                      width:'1000px',
+                      margin:'0auto'
+                    });
+                  }else {
+                    menu.css({
+                      position:'relative',
+                      top:''
+                    });
+                  }
+                });
+              });
+        </script>
+    </div>
+  
+      <div class="lnb" >
+        <h1 class="bigTitle">
+          <a href="#">여행정보</a>
+        </h1>
+        <ul>
+          <li><a href="/test">Youtube 검색</a></li>
+          <li><a href="#">Blog검색</a></li>
+          <li class="allNotice on"><a href="/checkList">Check List</a></li>
+        </ul>
+
+  
+      </div>
+      <!-- //lnb -->
+  
+      <!-- contents -->
+      <div class="contents">
+  
+        <h2 class="checkList">Check List</h2>
+        <table class="checkListTable">
+            <thead>
+            <tr>
+                <th scope="cols">DATE.</th>
+                <th scope="cols">CHECK.</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th><img src="//img.tourtips.com/images//pc/preparation/img_d-15.jpg" alt="D-15">비자발급</th>
+                <td>비자를 발급받아야 하는지 확인하세요~<br>
+                중국,인도,몽골,미국등은 비자 발급이 필수인 여행지입니다!
+                </td>
+            </tr>
+            <tr>
+                <th><img src="//img.tourtips.com/images//pc/preparation/img_d-10.jpg" alt="D-10">여행 준비물</th>
+                <td>여행 갈 때 꼭 챙겨야 할 준비물!!<br>          
+                해당 여행지의 준비물과  수화물(짐)의 기준과 반입 금지 물품을 알아보아요.<br>
+                </td>
+            </tr>
+            <tr>
+                <th><img src="//img.tourtips.com/images//pc/preparation/img_d-5.jpg" alt="D-5">여행자 보험</th>
+                <td>여행지에서의 사고에 대비하여<br>
+                  여행자 보험의 종류와 혜택을 꼼꼼히 살펴보고 가입하세요.
+                </td>
+            </tr>
+            <tr>
+                <th><img src="//img.tourtips.com/images//pc/preparation/img_d-3.jpg" alt="D-3">면세점 쇼핑</th>
+                <td>해외 여행의 또 하나의 재미!<br>
+                  면세점 쇼핑하셨나요? 여러 혜택을 따져서 실속있게 쇼핑하세요.
+                </td>
+            </tr>
+            <tr>
+                <th><img src="//img.tourtips.com/images//pc/preparation/img_d-day.jpg" alt="D-DAY"></th>
+                <td>설레는 여행 당일!<br>
+                  한번 더 꼼꼼히 챙기고 여행 출발!! 
+                </td>
+            </tr>
+            </tbody>
+        </table>
+ 
+        <br line-height="20px">
+        <h2 class="checkList">환율 Check!</h2>
+        <table class="exchangeTable">
+            <thead>
+                <tr>
+                    <th scope="cols">국가</th>
+                    <th scope="cols">환율</th>
+                </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <th><img src="//img.tourtips.com/images//pc/preparation/img_d-15.jpg" alt="D-15">비자발급</th>
-                    <td>
-                      <div class="check_detail">
-                        <p>비자를 발급받아야 하는 도시로 여행을 가시나요?<br>미국, 중국, 인도, 몽골로 여행 갈 때는 비자 발급이 필수입니다.</p>
-                        <div class="update">
-                          <!--//2014-03-04 수정-->
-                          <span>2018.10.01 업데이트</span>
-                          <a href="/ap/preparation/step/?sc=1"
-                            onclick="_gaq.push(['_trackEvent', 'PREPARATION', 'PREPARATION_MAIN_MENU_VISA_140303','여행준비 메인 비자 메뉴 20140303']);">더보기</a>
-                        </div>
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th><img src="//img.tourtips.com/images//pc/preparation/img_d-10.jpg" alt="D-10">여행 준비물</th>
-                    <td>
-                      <div class="check_detail">
-                        <p>여행 갈 때 꼭 챙겨야 할 준비물.<br>여행 고수들이 추천하는 추천 물품부터 기본적으로 꼭 가져가야 하는 것이<br>무엇인지 확인해보세요.</p>
-                        <div class="update">
-                          <span>2018.10.05 업데이트</span>
-                          <a href="/ap/preparation/step/?sc=2"
-                            onclick="_gaq.push(['_trackEvent', 'PREPARATION', 'PREPARATION_MAIN_MENU_LUGGAGE_140303','여행준비 메인 여행준비물 메뉴 20140303']);">더보기</a>
-                        </div>
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th><img src="//img.tourtips.com/images//pc/preparation/img_d-5.jpg" alt="D-5">여행자 보험</th>
-                    <td>
-                      <div class="check_detail">
-                        <p>여행지에서의 분실, 도난 및 소매치기 등에 대비하여<br>여행자 보험의 종류와 혜택을 꼼꼼히 살펴보고 가입하세요.</p>
-                        <div class="update">
-                          <span>2017.07.04 업데이트</span>
-                          <a href="/ap/preparation/step/?sc=3"
-                            onclick="_gaq.push(['_trackEvent', 'PREPARATION', 'PREPARATION_MAIN_MENU_INSURANCE_140303','여행준비 메인 여행자보험 메뉴 20140303']);">더보기</a>
-                        </div>
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th><img src="//img.tourtips.com/images//pc/preparation/img_d-3.jpg" alt="D-3">면세점 쇼핑</th>
-                    <td>
-                      <div class="check_detail">
-                        <p>해외여행의 또 다른 재미! 면세점 쇼핑하셨나요?<br>여행 고수처럼 면세점에서 실속 있게 쇼핑하고 공항에서 <br>찾는 방법까지 알려드려요.</p>
-                        <div class="update">
-                          <span>2018.10.25 업데이트</span>
-                          <a href="/ap/preparation/step/?sc=4"
-                            onclick="_gaq.push(['_trackEvent', 'PREPARATION', 'PREPARATION_MAIN_MENU_DUTY FREE_140303','여행준비 메인 면세점이용 메뉴 20140303']);">더보기</a>
-                        </div>
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th><img src="//img.tourtips.com/images//pc/preparation/img_d-day.jpg" alt="D-DAY"></th>
-                    <td>
-                      <div class="check_d-Day">
-                        <strong>공항에서 출국까지</strong>
-                        <p>해외여행의 또 다른 재미! 면세점 쇼핑하셨나요?<br>여행 고수처럼 면세점에서 실속 있게 쇼핑하고 공항에서 <br>찾는 방법까지 알려드려요.</p>
-                        <div class="update other">
-                          <span>2018.10.25 업데이트</span>
-                          <a href="/ap/preparation/step/?sc=5"
-                            onclick="_gaq.push(['_trackEvent', 'PREPARATION', 'PREPARATION_MAIN_MENU_AIRPORT_140303','여행준비 메인 공항에서 출국까지 메뉴 20140303']);">더보기</a>
-                        </div>
-                        <strong>출입국 카드 작성</strong>
-                        <p>출입국 카드 작성법을 모르면 당황스러워요~<br>출입국 카드 작성법을 확인하고 출발하세요</p>
-                        <div class="update">
-                          <span>2017.07.04 업데이트</span>
-                          <a href="/ap/preparation/step/?sc=6"
-                            onclick="_gaq.push(['_trackEvent', 'PREPARATION', 'PREPARATION_MAIN_MENU_CARD_140303','여행준비 메인 출입국카드 메뉴 20140303']);">더보기</a>
-                        </div>
-                      </div>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
+                <tr>
+        </table>
+       </div>
+            </div>
+            </div>
+  </body>
+  </html>
+
+
+  
