--- a/src/app/community/tour-review/tour-review.component.html
+++ b/src/app/community/tour-review/tour-review.component.html
@@ -37,15 +37,15 @@
       </div>
       <div class="menubar">
           <ul>
-            <li><a href="#" id="current">여행정보</a>
+            <li><a href="#">여행정보</a>
               <ul>
-                <li><a href="/test">Youtube검색</a></li>
-                <li><a href="#">Blog검색</a></li>
-                <li><a href="#">Check List</a></li>
+                <li><a href="/search">Youtube검색</a></li>
+                <li><a href="/bsearch">Blog검색</a></li>
+                <li><a href="/checkList">Check List</a></li>
               </ul></li>
-            <li><a href="#">커뮤니티</a>
+            <li><a href="#" id="current">커뮤니티</a>
               <ul>
-                <li><a href="/sliders">여행 후기</a></li>
+                <li><a href="/review">여행 후기</a></li>
                 <li><a href="#">여행 계획</a></li>
                 <li><a href="#">동행인 구하기</a></li>
                 <li><a href="#">여행 Tip</a></li>
@@ -66,18 +66,25 @@
   
       <div class="lnb" >
         <h1 class="bigTitle">
-          <a href="/test">여행정보</a>
+          <a href="#">커뮤니티</a>
         </h1>
         <ul>
-          <li  class="allNotice on"><a href="/test">Youtube검색</a></li>
-          <li><a href="#">Blog검색</a></li>
-          <li class=""><a href="#">Check List</a></li>
+          <li  class="allNotice on"><a href="review">여행 후기</a></li>
+          <li><a href="galleries">여행 계획</a></li>
+          <li class=""><a href="#">동행인 구하기</a></li>
+          <li class=""><a href="#">여행 Tip</a></li>
         </ul>
 
   
       </div>
       <!-- //lnb -->
   
+      <!-- contents -->
+      <div class="contents">
+  
+        <h2 class="titleSt02">여행 후기</h2>
+  
+       </div>
             </div>
             </div>
   </body>
