--- a/src/styles.css
+++ b/src/styles.css
@@ -1894,6 +1894,7 @@ input[type="checkbox"]{ width:auto;outline:none;}
 
 
 .menubar {
+    position: relative;
 	width : 100%;
 	border: none;
 	border: 0px;
@@ -1926,7 +1927,8 @@ input[type="checkbox"]{ width:auto;outline:none;}
 .menubar li a {
 	background:  rgb(240, 23, 23);
 	color: #f1dbdb;
-	display: block;
+    display: block;
+    font-size: 18px;
 	font-weight: normal;
 	line-height: 50px;
 	margin: 0px;
@@ -1936,6 +1938,7 @@ input[type="checkbox"]{ width:auto;outline:none;}
 }
 
 .menubar li a:hover, .menubar ul li:hover a {
+    font-size: 16px;
 	background: rgba(252, 250, 250, 0.014);
 	color: #FFFFFF;
 	text-decoration: none;
@@ -1973,6 +1976,7 @@ input[type="checkbox"]{ width:auto;outline:none;}
 }
 
 .menubar li ul a {
+    
 	display: block;
 	height: 50px;
 	font-size: 12px;
@@ -1985,10 +1989,19 @@ input[type="checkbox"]{ width:auto;outline:none;}
 .menubar li ul a:hover, .menubar li ul li:hover a {
 	background: rgba(252, 250, 250, 0.014);
 	border: 0px;
-	color: #ffffff;
+	color: #f3b1b1;
 	text-decoration: none;
 }
 
 .menubar p {
 	clear: left;
+}
+
+body{
+    margin: 0px;
+    padding: 0px;
+}
+.scroll-fixed{
+    position: fixed;
+    top: 0px;
 }
