--- a/src/app/tourInfo/search-video/search.component.html
+++ b/src/app/tourInfo/search-video/search.component.html
@@ -3,10 +3,6 @@
     <meta charset="UTF-8">
 <body>
   <div id="wrap">
-  <style>
-  .up_close {background:url(//img.tourtips.com/images/common/close_btn_b.png) no-repeat right center; position:absolute; width:38px; height:37px; 
-  top:15px; right:30px; cursor:pointer}
-  </style>
   <div id="subWrap">
     <div id="header">
       <!-- headTop -->
@@ -37,7 +33,7 @@
       </div>
       <div class="menubar">
           <ul>
-            <li><a href="#" id="current">여행정보</a>
+            <li><a id="current">여행정보</a>
               <ul>
                 <li><a href="/search">Youtube검색</a></li>
                 <li><a href="/bsearch">Blog검색</a></li>
@@ -50,7 +46,7 @@
                 <li><a href="#">동행인 구하기</a></li>
                 <li><a href="#">여행 Tip</a></li>
               </ul></li>
-            <li><a href="/hotel">호텔</a>
+            <li><a>호텔</a>
               <ul>
                 <li><a href="/hotel">추천 숙박</a></li>
               </ul></li>
