--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -31,25 +31,25 @@
 		</div>
 		<div class="menubar" >
 			<ul>
-				<li><a href="#">여행정보</a>
+				<li><a>여행정보</a>
 					<ul>
 						<li><a href="/search">Youtube검색</a></li>
 						<li><a href="/bsearch">Blog검색</a></li>
 						<li><a href="/checkList">Check List</a></li>
 					</ul></li>
-				<li><a href="#" id="current">커뮤니티</a>
+				<li><a>커뮤니티</a>
 					<ul>
 						<li><a href="/review">여행 후기</a></li>
 						<li><a href="#">여행 계획</a></li>
 						<li><a href="#">동행인 구하기</a></li>
 						<li><a href="#">여행 Tip</a></li>
 					</ul></li>
-				<li><a href="/hotel">호텔</a>
+				<li><a>호텔</a>
 					<ul>
 						<li><a href="/hotel">추천 숙박</a></li>
 					</ul></li>
 					<li><a href="#">공지사항</a></li>
-				<li><a href="#">마이페이지</a>
+				<li><a>마이페이지</a>
 					<ul>
 						<li><a href="#">내 작성글 보기</a></li>
 						<li><a href="#">회원 정보 수정</a></li>
