--- a/src/app/tourInfo/search-blog/search-blog.component.html
+++ b/src/app/tourInfo/search-blog/search-blog.component.html
@@ -3,10 +3,6 @@
     <meta charset="UTF-8">
 <body>
   <div id="wrap">
-  <style>
-  .up_close {background:url(//img.tourtips.com/images/common/close_btn_b.png) no-repeat right center; position:absolute; width:38px; height:37px; 
-  top:15px; right:30px; cursor:pointer}
-  </style>
   <div id="subWrap">
     <div id="header">
       <!-- headTop -->
@@ -37,20 +33,20 @@
       </div>
       <div class="menubar">
           <ul>
-            <li><a href="#" id="current">여행정보</a>
+            <li><a id="current">여행정보</a>
               <ul>
                 <li><a href="/search">Youtube검색</a></li>
                 <li><a href="/bserch">Blog검색</a></li>
                 <li><a href="/checkList">Check List</a></li>
               </ul></li>
-            <li><a href="#">커뮤니티</a>
+            <li><a>커뮤니티</a>
               <ul>
                 <li><a href="/review">여행 후기</a></li>
                 <li><a href="#">여행 계획</a></li>
                 <li><a href="#">동행인 구하기</a></li>
                 <li><a href="#">여행 Tip</a></li>
               </ul></li>
-            <li><a href="/hotel">호텔</a>
+            <li><a>호텔</a>
               <ul>
                 <li><a href="/hotel">추천 숙박</a></li>
               </ul></li>
@@ -69,15 +65,9 @@
           <a href="/search">여행정보</a>
         </h1>
         <ul>
-<<<<<<< HEAD:src/app/tourInfo/search-blog/search-blog.component.html
           <li><a href="/search">Youtube검색</a></li>
           <li class="allNotice on"><a href="/bsearch">Blog검색</a></li>
           <li><a href="/checkList">Check List</a></li>
-=======
-          <li  class="allNotice on"><a href="/test">Youtube검색</a></li>
-          <li><a href="#">Blog검색</a></li>
-          <li class=""><a href="/checkList">Check List</a></li>
->>>>>>> 22837df54d5a31fc4a45be34fb116d11b6afdb26:src/app/user/test/test.component.html
         </ul>
 
   
