--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -14,7 +14,7 @@
 			</span>
 			<!-- loginArea : 로그인 전 -->
 			<div class="loginArea" style="width: 125px;">
-				<a href="#">로그인</a> <span>|</span> <a href="#">회원가입</a>
+				<a href="/login">로그인</a> <span>|</span> <a href="/signup">회원가입</a>
 			</div>
 			<div id="search">
 				<form method="get" action="#">
@@ -48,7 +48,7 @@
 					<ul>
 						<li><a href="/hotel">추천 숙박</a></li>
 					</ul></li>
-					<li><a href="#">공지사항</a></li>
+					<li><a href="/noticeboard">공지사항</a></li>
 				<li><a>마이페이지</a>
 					<ul>
 						<li><a href="#">내 작성글 보기</a></li>
@@ -57,26 +57,5 @@
 			</ul>
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-	integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script>
-			$(function () {
-
-				$(document).ready(function () {
-
-					var scrollOffset = $('.menubar').offset();
-
-					$(window).scroll(function () {
-						if ($(document).scrollTop() > scrollOffset.top) {
-							$('.menubar').addClass('scroll-fixed');
-						}
-						else {
-							$('.menubar').removeClass('scroll-fixed');
-						}
-					});
-				});
-
-			});
-	</script>
 </body>
 </html>
