--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,11 +1,25 @@
-<script>
-function test(){
-  alert(1);
-}
-</script>
-<div>
-  아이디 : <input type="text" id="id" [(ngModel)]="id"><br>
-  비번 : <input type="text" id="pwd" [(ngModel)]="pwd"><br>
-  <button (click)="doLogin()">로그인</button>
-
+<div class="login-container">
+  <section class="login" id="login">
+    <header>
+      <h2>Application Name</h2>
+      <h4>Login</h4>
+    </header>
+    <form class="login-form" action="#" method="post">
+      <input type="text" class="login-input" placeholder="User" required autofocus/>
+      <input type="password" class="login-input" placeholder="Password" required/>
+      <div class="center">
+          <span class="loginwith">Sign in with social network</span>
+          
+          <button class="social-signin facebook">Log in with facebook</button><br>
+          <button class="social-signin twitter">Log in with Twitter</button><br>
+          <button class="social-signin google">Log in with Google+</button>
+          
+        </div>
+      <div class="submit-container">
+        
+        <button type="submit" class="login-button">SIGN IN</button>
+      </div>
+    </form>
+  </section>
+  
 </div>
