--- a/src/app/tourInfo/search-blog/search-blog.component.css
+++ b/src/app/tourInfo/search-blog/search-blog.component.css
@@ -1,5 +1,18 @@
 .searchResult{
-    margin-top: 50px;
-    font-size: 18px;
-    line-height: 20px;
+    border-top: 1px solid red;
+    border-collapse: collapse;
+    border-spacing: 25px;
+    font-size:15px;
+    border-bottom: 1px solid red;
+    
+}
+th{
+    padding:10px;
+    height: 50px;
+}
+
+tr td{
+    height: 50px;
+    padding: 10px;
+    border-top: 1px solid rgb(221, 221, 221);
 }
