--- a/src/app/tourInfo/search-video/search.component.html
+++ b/src/app/tourInfo/search-video/search.component.html
@@ -75,9 +75,8 @@
      
       <!-- //lnb -->
       <div class="contents">
-  		   <h2 class="titleSt02">검색</h2>
-		        검색어 : <input type="text" [(ngModel)]="searchWord">
-						<button (click)="search()">검색</button>
+		        검색어 : <input type="text" [(ngModel)]="searchWord" style="width:250px; height:30px ;">&nbsp;
+            <button (click)="search()" style="height:30px ;" class="btn btn-outline-secondary">검색</button>
 							<table *ngFor="let sc of scList" class="videoTable"> 
 								<tr>
 									<td>{{sc.snippet.title}}</td>
