--- a/src/app/user/signup/signup.component.html
+++ b/src/app/user/signup/signup.component.html
@@ -1,23 +1,115 @@
-<div id="login-box">
-  <div class="left">
-    <h1>Sign up</h1>
-    <input name="myFile" type="file">
-    <input type="text" name="username" placeholder="Username" />
-    <input type="text" name="email" placeholder="E-mail" />
-    <input type="password" name="password" placeholder="Password" />
-    <input type="password" name="password2" placeholder="Retype password" />
-   
-    <input type="tel" id="phone" name="phone"
-       pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-456-7890"
-       required>
-    <input type="date">  
-       <form>
-        <input type="radio" name="gender" value="male" checked> Male
-        <input type="radio" name="gender" value="female"> Female
-        <input type="radio" name="gender" value="other"> Other
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+</head>
+<body>
+    <div id="wrap">
+        <style>
+        .up_close {background:url(//img.tourtips.com/images/common/close_btn_b.png) no-repeat right center; position:absolute; width:38px; height:37px; 
+        top:15px; right:30px; cursor:pointer}
+        </style>
+        <div id="subWrap">
+          <div id="header">
+            <!-- headTop -->
+            <div class="headTop">
+              <span class="logo"> <a href="#"> <img
+                  src="//img.tourtips.com/images/pc/logo/origin.gif" alt="투어팁스">
+              </a>
+              </span>
+          </div>
+       </div>
+    </div>  
+    </div>        
+    <form class="form-horizontal" action='' method="POST">
+        <fieldset>
+            <table>
+              <br>
+          <div id="legend">
+            <legend class=""><b>회원가입</b></legend>
+            <br><br><br>
+          </div>
+          
+          <div class="control-group">
+            <!-- Username -->
+            <label class="control-label col-sm-11" style="text-align: left;" for="username"><b>이름</b></label>
+            <div class="controls">
+              <input type="text" id="username" name="username" placeholder="your name" class="input-xlarge" style="text-align: center;">
+              
+            </div>
+          </div>
+          <br>
+          <div class="control-group">
+              <!-- Username -->
+              <label class="control-label col-sm-11" style="text-align: left;" for="userNick"><b>닉네임</b></label>
+              <div class="controls">
+                <input type="text" id="userNick" name="userNick" placeholder="your Nickname" class="input-xlarge" style="text-align: center;">
+                
+              </div>
+            </div>
+            <br>
+          <div class="control-group">
+              <!-- Password-->
+              <label class="control-label col-sm-11" style="text-align: left;" for="password"><b>비밀번호</b></label>
+              <div class="controls">
+                <input type="password" id="password" name="password" placeholder="Password should be at least 4 characters" class="input-xlarge" style="text-align: center;">
+              </div>
+            </div>
+          <br>
+          <div class="control-group">
+              <!-- Password -->
+              <label class="control-label col-sm-11" style="text-align: left;" for="password_confirm"><b>비밀번호 확인</b></label>
+              <div class="controls">
+                <input type="password" id="password_confirm" name="password_confirm" placeholder="Rewrite your Password" class="input-xlarge"  style="text-align: center;">
+              </div>
+            </div>
+            <br>
+          <div class="control-group">
+            <!-- E-mail -->
+            <label class="control-label col-sm-11" style="text-align: left;" for="email"><b>E-mail</b></label>
+            <div class="controls">
+              <input type="text" id="email" name="email" style="text-align: center;" placeholder="Please provide your E-mail" class="input-xlarge">
+            </div>
+          </div>
+          <br>
+          <div class="control-group">
+              <!-- tel -->
+              <label class="control-label col-sm-11" style="text-align: left;" for="email"><b>휴대전화</b></label>
+              <div class="controls">
+                <input type="tel" id="phone" name="phone" style="text-align: center;" placeholder="Phone number" class="input-xlarge">
+              </div>
+          </div>
+          <br>
+          <div class="control-group">
+              <!-- birth -->
+              <label class="control-label col-sm-11" style="text-align: left;" for="email"><b>생년월일</b></label>
+              <div class="controls">
+                <input type="date" id="phone" name="phone" style="text-align: center;" placeholder="Phone number" class="input-xlarge">
+              </div>
+          </div>
+          <br>
+          <div class="control-group">
+              <!-- gender -->
+              <label class="control-label col-sm-11" style="text-align: left;" for="email"><b>성별</b></label>
+              <div class="controls">
+                <select id='gender'>
+                  <option>선택</option>
+                  <option value="1">남자</option>
+                  <option value="2">여자</option>
+                </select>
+              </div>
+          </div>
+          <br>
+          
+          <div class="control-group">
+            <!-- Button -->
+            <div class="controls">
+              <button class="btn btn-outline-success">가입하기</button>
+            </div>
+            <br>
+          </div>
+        </table>
+        </fieldset>
       </form>
-    
-    <input type="submit" name="signup_submit" value="Sign me up" />
-  </div>
- 
-</div>
+</body>
+</html>
