--- a/src/app/community/tips/tips.component.html
+++ b/src/app/community/tips/tips.component.html
@@ -1,19 +1,22 @@
-<div id="subWrap">
-    <div class="lnb">
+  <div id="subWrap">
+      <div class="lnb">
       <h1 class="bigTitle">
           <a href="#">커뮤니티</a>
       </h1>
       <ul>
-          <li class="allNotice on"><a href="/review">여행 후기</a></li>
+          <li><a href="review">여행 후기</a></li>
           <li><a href="#">여행 계획</a></li>
-          <li class=""><a href="#">동행인 구하기</a></li>
-          <li><a href="/tips">여행 Tip</a></li>
+          <li><a href="#">동행인 구하기</a></li>
+          <li class="allNotice on"><a href="/tips">여행 Tip</a></li>
       </ul>
+
+
+  
       </div>
      
       <!-- //lnb -->
       <div class="contents">
-		        <table class="reviewTable">
+		        <table class="tipsTable">
               <colgroup>
                 <col style="width:10%">
                 <col style="width:25%">
@@ -37,9 +40,13 @@
               </tr>
               
             </table>
-            <br>     
+            <br>
+      
             <div class="col text-right">
-            <button type="button" class="btn btn-outline-danger" onclick="location.href='/reviewWrite'">글쓰기</button>
+            <button type="button" class="btn btn-outline-danger" onclick="location.href='/tipsWrite'">글쓰기</button>
           </div>
             </div>
-          </div>
+      </div>
+
+
+  
