--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <!-- <a [routerLink]="['/login']">로그인</a>-->
-
+<!-- <app-main></app-main> -->
+<app-menu></app-menu>
 <router-outlet></router-outlet>
