--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,35 +1,56 @@
-html, body {
-    position: relative;
-    height: 100%;
-  }
-  body {
-    background: #eee;
-    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    color:#000;
-    margin: 0;
-    padding: 0;
-  }
-  .swiper-container {
-    width: 100%;
-    height: 100%;
-  }
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
+.carouselExampleIndicators{
+    margin-top : 10px; 
+}
 
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-  }
+.about_area{
+    margin-top: 50px;
+}
+.about_area h2{
+    padding:55px o 105px;
+    text-align: center;
+    font-size: 40px;
+    margin-top: 50px;
+}
+.abpout_area .about_box{
+    background: #f4f0e9;
+}
+
+.about_area .place_list li{
+    float: left;
+    width: 32%;
+    margin-left: 2%;
+    text-align: center;
+    position: relative;
+    top: -50px;
+}
+.about_area .place_list li:first-child{
+    margin-left: 0%;
+}
+
+.about_area .place_list li .topplace{
+    width: 100%;
+}
+
+.about_area .place_list li h3{
+    font-weight: bold;
+    font-size: 18px;
+    padding-top: 25px;
+    color: #000;
+}
+.about_area .place_list li p.txt{
+    box-sizing: border-box;
+    padding: 10px 30px 0;
+    width: 100%;
+    overflow: hidden;
+    word-break: keep-all;
+    line-height: 1.8;
+    color: #666;
+}
+
+.about_area .place_list li .view{
+    display: inline-block;
+    margin-top: 20px;
+    padding-top:5px;
+    border-top: 2px solid #333;
+    color: #666;
+}
