--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,46 +1,78 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Swiper demo</title>
-  <!-- Link Swiper's CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
-
-  <!-- Demo styles -->
-  <style>
-    
-  </style>
 </head>
+
 <body>
-  <!-- Swiper -->
-  <div class="swiper-container">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRT5DQ5IW0qBc2HWoLhTKGzlEJgexpkSk3GJtP2zFY9VXSC6Xx"></div>
-      <div class="swiper-slide"><img src="http://image.chosun.com/sitedata/image/201808/08/2018080801525_1.jpg"></div>
-      <div class="swiper-slide"><img src="http://image.chosun.com/sitedata/image/201808/08/2018080801525_2.jpg"></div>
-      <div class="swiper-slide"><img src="https://postfiles.pstatic.net/20140523_169/teckwrap_1400821454869MOtgM_JPEG/%C0%CC%C7%C1%BF%C2%B8%AE_%C6%F7%BD%BA%C5%CD.jpg?type=w1"></div>
-      <div class="swiper-slide"><img src="http://image.chosun.com/sitedata/image/201808/08/2018080801525_0.jpg"></div>
-      <div class="swiper-slide"><img src="https://postfiles.pstatic.net/20140523_253/teckwrap_1400821638102c3ICO_JPEG/%C0%CC%C7%C1%BF%C2%B8%AE_%C1%A6%B4%CF%C6%DB%B9%AB%BA%F1.jpg?type=w1"></div>
-      <div class="swiper-slide"><img src="https://post-phinf.pstatic.net/MjAxODEwMDhfNzcg/MDAxNTM4OTkxNDAzNTg0.dbclkZ89npkPt4x1zTiG_lFNlsDm9OdW757KX0PKkzkg.Fe6xwx8lkakx56tQSZCB5xZttBfZwObq6GAvQWaxFzgg.JPEG/mug_obj_1538991403752602.jpg?type=w1080"></div>
-      <div class="swiper-slide"><img src="https://postfiles.pstatic.net/20140523_212/teckwrap_1400821784992X82mc_JPEG/%C0%CC%C7%C1%BF%C2%B8%AE_%C8%F7%B7%CE%C0%CE.jpg?type=w1"></div>
-      <div class="swiper-slide"><img src="https://pds.joins.com//news/component/htmlphoto_mmdata/201711/14/56cb8c49-d757-49ae-beb6-fdd664e76404.jpg"></div>
-      <div class="swiper-slide"><img src="http://file3.instiz.net/data/file3/2018/09/06/2/e/1/2e15bee787ea6758f27225ee3090549f.jpg"></div>
+  <div id="subWrap">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" width="380" height="420"
+            src="https://post-phinf.pstatic.net/MjAxNzEwMDVfNTMg/MDAxNTA3MTk4MDAyMzcy.NTmzjTg3ygEXUiCLO48a8x1NPNqJmDIsdL9G_fjOFlEg.FQQEMx5_3XBee0vfCBcYg1W_yNyZYDmg1p08RjOSBoMg.JPEG/001.JPG?type=w1200"
+            alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" width="380" height="420"
+            src="https://post-phinf.pstatic.net/MjAxNzEwMDVfMTE0/MDAxNTA3MTk4MDAyODM2.fpL5DfzDb2g0MsCI5O2mgKd0BOMr7EDkvK3VL2l01mwg.vwLi7noxakCBH92ri9o0QtIJ73i0L29pBmJftZVBOvog.JPEG/002.JPG?type=w1200"
+            alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" width="380" height="420"
+            src="https://post-phinf.pstatic.net/MjAxNzEwMDVfMzQg/MDAxNTA3MTk4MDAzMDA5.Hb4sfvSezujO-lgf0IOywymK4jOBOkGLCq51Ni06tU0g.Y0UIpQpy0lgwxt5y-2lWnKBsFiCSCpFqvBCS1CZS2kwg.JPEG/021.JPG?type=w1200"
+            alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </div>
 
-  <!-- Initialize Swiper -->
-  <script>
-    var swiper = new Swiper('.swiper-container',
-    {
-      autoplay:{
-        delay:5000,
-      },
-    });
-  </script>
+  <div class="about_area">
+    <h2>인기여행지!!</h2>
+    <div class="about_box">
+      <ul class="place_list box_inner clear">
+        <li><a href="#" onclick="$('.popup_base').css('height',$(document).height());$('.contact_pop').show();">
+            <img class="topplace" src="../assets/imgs/tripgam.png">
+            <h3>일단 로고</h3>
+            <p class="txt">일단 로고를 넣어 봅미다.</p>
+            <span class="view">View</span>
+          </a>
+        </li>
+        <li><a href="#" onclick="$('.popup_base').css('height',$(document).height());$('.contact_pop').show();">
+            <img class="topplace" src="../assets/imgs/tripgam.png">
+            <h3>일단 로고</h3>
+            <p class="txt">일단 로고를 넣어 봅미다.</p>
+            <span class="view">View</span>
+          </a>
+        </li>
+        <li><a href="#" onclick="$('.popup_base').css('height',$(document).height());$('.contact_pop').show();">
+            <img class="topplace" src="../assets/imgs/tripgam.png">
+            <h3>일단 로고</h3>
+            <p class="txt">일단 로고를 넣어 봅미다.</p>
+            <span class="view">View</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </body>
+
 </html>
